# sketch-grammar-explorer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  README_deprecated.md  README_pypi.md  app.py  config.yml  corp_info.py  fhps_api.py  fhps_prep.py  freqs_api.py  freqs_prep.py  grammar.txt  index.py  pyproject.toml  requirements.txt  semver.py  setup.cfg  ttypes_api.py
.github/workflows/: python-package.yml  release-please.yml  unit-test.yml
PR/: get_ttypes_api.py  precision_api.py
apps/: app1.py  app2.py  app3.py  app4.py  app5.py
data/: fhps_data.csv  freqs_data.csv  freqs_stats_rels.csv  freqs_stats_ttypes.csv  ttypes.csv  ws_freqs.csv
scripts/: callexamples.py  callmake.py  calls.py  callsa.py  callsb.py  callshelper.py  callsprep.py  classes.py  corp_info.py  ecolexicon-freqs-preprocessing.py  fhps_api.py  fhps_prep.py  freqs_api.py  freqs_prep.py  multicall.py  ttypes_api.py  view_api.py  view_precision_api.py  view_prep.py  ws_freqs_api.py  ws_freqs_prep.py
scripts/calls/: attrvals.py  basiccall.py  corpinfo.py  freqs.py  view.py  wordlist.py
sge/: __init__.py  call.py  call_examples.py  config.py  convert_grammar.py  examples.py  parse.py
sge/data/: __init__.py  call_types.py  config.yml  json_tests.py
sge/data/yml_tests/: collx.yml  freqs.yml  view.yml  wordlist.yml  wsketch.yml
sgex/: __init__.py  _call.py  _version.py  assemble.py  call.py  call_examples.py  calltofile.py  config.py  convert_grammar.py  io.py  job.py  parse.py  query.py  util.py  wait.py
sgex/_parse/: __init__.py  corp_info.py  freqs.py
sgex/_parse/json/: __init__.py  corp_info.py  freqs.py  wordlist.py
sgex/call/: __init__.py  call.py  hook.py  job.py  package.py  query.py  type.py
sgex/parse/: __init__.py  corp_info.py  freqs.py  wordlist.py
sgex/test/: README.md
sgex/test/integration/: test_io.py
sgex/test/integration/test_call/: test_package.py
sgex/test/integration/test_parse/: test_corp_info.py  test_freqs.py  test_wordlist.py
sgex/test/unit/: test_config.py  test_io.py
sgex/test/unit/test_call/: test_query.py  test_type.py
test/: README.md  annotation_line.json  example.json  example.jsonl  example.yml  test_call_integration.py  test_job.py  test_job_integration.py  test_query.py  test_util.py
test/integration/: test_io.py
test/integration/test_call/: test_job.py  test_package.py
test/unit/: test_config.py  test_io.py
test/unit/test_call/: test_call.py  test_hook.py  test_query.py
