[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgex"
version = "0.7.5"  # x-release-please-version
requires-python = ">=3.11"
authors = [{name="Loryn Isaacs", email="50170623+engisalor@users.noreply.github.com"}]
description = "Sketch Grammar Explorer (Sketch Engine API wrapper)"
keywords = [
    "sketch engine",
    "api wrapper",
    "corpus linguistics",
    "text analysis",
    "natural language processing",
]
readme = "README_pypi.md"
license = {file = "LICENSE"}
classifiers =[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "aiofiles",
    "aiohttp",
    "pandas",
    "pyyaml",
]

[project.urls]
repository = "https://github.com/engisalor/sketch-grammar-explorer.git"

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["sgex*"]
