[metadata]
name = sgex
version = 0.5.5  # x-release-please-version
author = Loryn Isaacs
author_email = 50170623+engisalor@users.noreply.github.com
description = Sketch Grammar Explorer (Sketch Engine API wrapper)
keywords =
    sketch engine
    api wrapper
    corpus linguistics
    natural language processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/engisalor/sketch-grammar-explorer
license = BSD-3-Clause
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    pyyaml
    requests
    requests-cache
